fix: mobile only scrollbar in /projects tabs

--- a/src/components/modules/Tabs/tabs.module.scss
+++ b/src/components/modules/Tabs/tabs.module.scss
@@ -10,6 +10,7 @@
     white-space: nowrap;
   }
   @include media-breakpoint-up(md) {
+    overflow-x: unset;
     column-gap: 24px;
     font-size: 14px;
   }
